agregando fotos de productos

--- a/src/views/partials/sec-carrousel.ejs
+++ b/src/views/partials/sec-carrousel.ejs
@@ -12,7 +12,7 @@
         </article>
 
         <article class="product">
-            <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
+            <img src="/images/productos/accesorios/gorra-openmind-rosa.jpg" alt="gorra-openmind-rosa">
             <div class="product-description">
                 <i class="fas fa-shopping-cart"></i>
                 <p class="p-name">nombre producto</p>
@@ -23,7 +23,7 @@
         </article>
 
         <article class="product">
-            <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
+            <img src="/images/productos/abrigos/campera-district-naranja.jpg" alt="campera-district-narnaja">
             <div class="product-description">
                 <i class="fas fa-shopping-cart"></i>
                 <p class="p-name">nombre producto</p>
@@ -34,7 +34,7 @@
         </article>
 
         <article class="product">
-            <img src="/images/productos/accesorios/billetera-colgante-tigre.jpg" alt="billetera-colgante-tigre">
+            <img src="/images/productos/pantalones/pantalon-flex-negro.jpg" alt="pantalon-flex-negro">
             <div class="product-description">
                 <i class="fas fa-shopping-cart"></i>
                 <p class="p-name">nombre producto</p>
