--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
     <div class="futer">
         <section class="products-footer">
-            <h5>Productos</h5>
+            <a href="/products"><h5>Productos</h5></a>
             
             <div class="product-list">
                 <p>Remeras</p>
