--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,7 @@
                                 </form>
                             </div>
                         </li>
-                        <li><a href="#">Productos</a></li>
+                        <li><a href="/products">Productos</a></li>
                         <li><a href="#">Tabla de talles</a></li>
                         <li><a href="#">Contacto</a></li>
                         <li><a href="#">Preguntas frecuentes</a></li>
@@ -30,7 +30,7 @@
         </nav>
 
         <div class="logo"> 
-            <a href="/"><img src="images/x-3d.png" alt="Logo de x-person"><p>Person</p></a>
+            <a href="/"><img src="/images/pagina/x-3d.png" alt="Logo de x-person"><p>Person</p></a>
         </div>
 
         <div class="form-serch-header">
@@ -44,7 +44,7 @@
         </div>
 
         <div class="car">
-            <a href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
+            <a href="/products/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
         </div> 
     </div>
 </header>
