--- a/src/views/partials/sec-carrousel.ejs
+++ b/src/views/partials/sec-carrousel.ejs
@@ -7,7 +7,7 @@
                 <p class="p-name">nombre producto</p>
                 <p class="p-price">precio</p>
                 <p class="p-descuentos">20% off</p>
-                <a href="/detalle-producto"><button class="ver-btn">VER</button></a>
+                <a href="products/<%= products.id %> "><button class="ver-btn">VER</button></a>
             </div>
         </article>
 
