--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -1,6 +1,7 @@
-<%- include ("partials/head") %> 
+<html>
+    <%- include ("../partials/head") %> 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("../partials/header.ejs") %>
 
     <main class="product-cart">
         <h2>Carrito de compras</h2>
@@ -91,6 +92,6 @@
     </main>
 
 
-    <%- include("partials/footer") %> 
+    <%- include("../partials/footer") %> 
 </body>
 </html>
