--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -1,6 +1,6 @@
-<%- include ("partials/head") %> 
+<%- include ("../partials/head") %> 
     <body>
-        <%- include("partials/header.ejs") %>
+        <%- include("../partials/header.ejs") %>
         <main class ="register">
             <section class="titulos">
                 <h1>Creá tu cuenta ¡Gratis!</h1>
@@ -33,17 +33,17 @@
                 </form>
                 <div class="carrousel">
                     <!-- <i class="fas fa-arrow-left"></i> -->
-                    <img src="/images/banner-l-r.jpg" alt="banner">
+                    <img src="/images/pagina/banner-l-r.jpg" alt="banner">
                     <!-- <i class="fas fa-arrow-right"></i> -->
                 </div>
         
             </section>
             <section class="a-login">
-                ¿Ya tenés una cuenta? <a href="/ingresar">Iniciá sesión</a>
+                ¿Ya tenés una cuenta? <a href="./ingresar">Iniciá sesión</a>
             </section>
 
         </main>
 
-        <%- include("partials/footer") %>
+        <%- include("../partials/footer") %>
     </body>
     </html>
