--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,28 +1,29 @@
-<%- include ("partials/head") %> 
+</html>
+<%- include ("../partials/head") %> 
     <body>
-        <%- include("partials/header.ejs") %>
+        <%- include("../partials/header.ejs") %>
 
     <main class="product-detail">
     <section class="container">
             <div class="columna-images">
-                <img src="/images/productos/remeras/remera1.1.jpg" id= "ProductImg" alt="REMERA THE NEW OLD SCHOOL - LISA">
+                <img src="/images/product-image/<%= productDetail.image %>" id= "ProductImg" alt="<%= productDetail.name %>">
                 <div class="small-img-row">
                     <div class="small-img">
-                        <img src="/images/productos/remeras/remera1.1.jpg" alt="REMERA THE NEW OLD SCHOOL - LISA"  class="small-img">
+                        <img src="/images/product-image/<%= productDetail.image%>" id= "Product" alt="<%= productDetail.name %>"  class="small-img">
                     </div>
                     <div class="small-img">
-                        <img src="/images/productos/remeras/remera1.2.jpg" alt="REMERA THE NEW OLD SCHOOL - LISA" class="small-img">
+                        <img src="/images/product-image/<%= productDetail.image%>" alt="<%= productDetail.name %>" class="small-img">
                     </div>
                     <div class="small-img">
-                        <img src="/images/productos/remeras/remera1.3.jpg" alt="REMERA THE NEW OLD SCHOOL - LISA"  class="small-img">
+                        <img src="/images/product-image/<%= productDetail.image %>" alt="<%= productDetail.name %>"  class="small-img">
                     </div>
                     <div class="small-img">
-                        <img src="/images/productos/remeras/remera1.4.jpg" alt="REMERA THE NEW OLD SCHOOL -LISA"  class="small-img">
+                        <img src="/images/product-image/<%= productDetail.image %>" alt="<%= productDetail.name %>"  class="small-img">
                     </div>
                 </div>
             </div>
             <div class="columna-desc">
-                <h2 class=product-name>REMERA THE NEW OLD SCHOOL - LISA</h2><h2 class=product-price> $1200</h2>
+                <h2 class=product-name><%= productDetail.name %><h2 class=product-price> <%= productDetail.price %></h2>
                 
                 <form action="/" method="GET">
                     <div class="elec-talle-color">
@@ -55,15 +56,7 @@
                         <button type="submit">Agregar al carrito</button>
                 </form>
                 <h3 class="desc-prod">Detalles del productos</h3>
-                <p>Esta prenda posee tencnología HIDROWICK
-                    Disipa la transpiración evitando el reingreso de humedad en la piel y en la prenda
-                    Regula la temperatura corporal y facilita la transpiracion de la piel 
-                    Costuras planas</p>
-                <div class="p-create">
-                    <a href="/crear-producto"><button>Crear producto</button></a>
-                </div>
-                <div class="p-modify">
-                    <a href="/modificar-producto"><button>Editar producto</button></a>
+                <p><%= productDetail.description %></p>
                 </div>
             </div>
 
@@ -72,6 +65,6 @@
 
     </main>
 
-    <%- include("partials/footer") %> 
+    <%- include("../partials/footer") %> 
 </body>
 </html>
