--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -1,6 +1,6 @@
-    <%- include ("partials/head") %> 
+    <%- include ("../partials/head") %> 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("../partials/header.ejs") %>
     <main class="login">
         <section class="titulos">
             <h1>Inciar sesión</h1>
@@ -8,7 +8,7 @@
         <section class=forms>
             <div class="carrousel">
                 <!-- <i class="fas fa-arrow-left"></i> -->
-                <img src="/images/banner-l-r.jpg" alt="banner">
+                <img src="/images/pagina/banner-l-r.jpg" alt="banner">
                 <!-- <i class="fas fa-arrow-right"></i> -->
             </div>
             <form action="/index" method="post">
@@ -31,9 +31,9 @@
             </form>
         </section>
         <section class="a-register">
-            ¿Todavía no tenés una cuenta? <a href="/registro">Registrate</a>
+            ¿Todavía no tenés una cuenta? <a href="./registro">Registrate</a>
         </section>
     </main>
-    <%- include("partials/footer") %> 
+    <%- include("../partials/footer") %> 
 </body>
 </html>
