--- a/src/views/products/productCreate.ejs
+++ b/src/views/products/productCreate.ejs
@@ -36,6 +36,14 @@
             </select>
         </div>
         <div>
+            <label for="condition">Condición: </label>
+            <select name="condition" id="prod-size">
+                <option value="oferta" selected>  oferta </option>
+                <option value="novedad">  novedad </option>
+                <option value="destacado">  destacado </option>
+            </select>
+        </div>
+        <div>
             <label for="quantity">Cantidad: </label>
             <input type="number" name="cantidad" required>
         </div>
